# thesis

./: .gitignore  README.md  __init__.py  pyproject.toml
classes/: __init__.py  _ergodic_solver.py  analyse.py  backtest.py  calibrate.py  extract.py  fill_belief_adaptation.py  fill_belief_diagnostics.py  fill_rl.py  hawkes_filter.py  helpers.py  hjb_validation.py  market_maker.py  mean_reversion_metrics.py  mm_backtest_parallel.py  mm_competition.py  mm_pipeline_analysis.py  mm_pipeline_plots.py  orderbook.py  parallelisation.py  phantom_labels.py  queue_ahead.py  signature_calibration.py  simulate.py
data/: __init__.py  extraction.py  schema.py
data/mo_depth_data/: KGHM_tw_quartiles.npz
notebooks/: analysis.ipynb  analysis_empirical_data.ipynb  analysis_sims.ipynb  calibration.ipynb  calibration_quintets.ipynb  empirical_pipeline.ipynb  hawkes_calibration_full_KGHM.pkl  hjb_solver_validation.ipynb  mm_backtest.ipynb  multivariate_hawkes_params_KGHM.pkl  resiliency_calibration.ipynb  simulation.ipynb  simulation_fill_belief_pipeline.ipynb  simulation_rl_pipeline.ipynb  simulation_stylized_facts.ipynb
scripts/: __init__.py  build_calibration_quintets.py
validation/: __init__.py  smoke_test.py
