[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-core"
version = "0.1.0"
description = "Research package: simulation, calibration, analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "scipy>=1.7",
    "optuna>=3.0",
    "sortedcontainers>=2.4",
    "tick>=0.7",
    "numba>=0.56",
]

# This directory is the repo root; the import name is still ``research_core``.
[tool.setuptools]
package-dir = { "research_core" = "." }
packages = [
    "research_core",
    "research_core.classes",
    "research_core.data",
    "research_core.scripts",
    "research_core.validation",
]
